<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teststand_hw</name>
  <version>0.0.0</version>
  <description>The teststand_hw package</description>
  <maintainer email="victor.noppeney@alumni.usp.br">Vtn21</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>ros2_hardware_interface_odri</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
